--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,19 @@
 
     <build>
         <sourceDirectory>src/main/java/</sourceDirectory>
-        <testSourceDirectory>src/test/java/</testSourceDirectory>
         <resources>
             <resource>
                 <directory>src/main/resources/</directory>
             </resource>
         </resources>
+
+        <testSourceDirectory>src/test/java/</testSourceDirectory>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources/</directory>
+            </testResource>
+        </testResources>
+
         <pluginManagement>
             <plugins>
                 <plugin>
